src/grammar/FOOLParser.java
// Generated from C:/Users/Alberto/workspace/fool/src/parser\FOOL.g4 by ANTLR 4.7
package grammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FOOLParser extends Parser {
    public static final int
            SEMIC = 1, COLON = 2, COMMA = 3, EQ = 4, LEQ = 5, GEQ = 6, AND = 7, OR = 8, NOT = 9, ASM = 10,
            PLUS = 11, MINUS = 12, TIMES = 13, DIV = 14, TRUE = 15, FALSE = 16, LPAR = 17, RPAR = 18,
            CLPAR = 19, CRPAR = 20, IF = 21, THEN = 22, ELSE = 23, LET = 24, IN = 25, VAR = 26, FUN = 27,
            INT = 28, BOOL = 29, CLASS = 30, IMPLEMENTS = 31, THIS = 32, NEW = 33, DOT = 34, INTEGER = 35,
            ID = 36, WS = 37, LINECOMENTS = 38, BLOCKCOMENTS = 39, ERR = 40;
    public static final int
            RULE_prog = 0, RULE_classdec = 1, RULE_let = 2, RULE_vardec = 3, RULE_varasm = 4,
            RULE_fun = 5, RULE_dec = 6, RULE_type = 7, RULE_exp = 8, RULE_term = 9,
            RULE_factor = 10, RULE_value = 11;
    public static final String[] ruleNames = {
            "prog", "classdec", "let", "vardec", "varasm", "fun", "dec", "type", "exp",
            "term", "factor", "value"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "';'", "':'", "','", "'=='", null, null, "'&&'", "'||'", "'!'",
            "'='", "'+'", "'-'", "'*'", "'/'", "'true'", "'false'", "'('", "')'",
            "'{'", "'}'", "'if'", "'then'", "'else'", "'let'", "'in'", "'var'", "'fun'",
            "'int'", "'bool'", "'class'", "'implements'", "'this'", "'new'", "'.'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "SEMIC", "COLON", "COMMA", "EQ", "LEQ", "GEQ", "AND", "OR", "NOT",
            "ASM", "PLUS", "MINUS", "TIMES", "DIV", "TRUE", "FALSE", "LPAR", "RPAR",
            "CLPAR", "CRPAR", "IF", "THEN", "ELSE", "LET", "IN", "VAR", "FUN", "INT",
            "BOOL", "CLASS", "IMPLEMENTS", "THIS", "NEW", "DOT", "INTEGER", "ID",
            "WS", "LINECOMENTS", "BLOCKCOMENTS", "ERR"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public FOOLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "FOOL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            setState(43);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case NOT:
                case MINUS:
                case TRUE:
                case FALSE:
                case LPAR:
                case IF:
                case THIS:
                case NEW:
                case INTEGER:
                case ID:
                    _localctx = new SingleExpContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(24);
                    exp();
                    setState(25);
                    match(SEMIC);
                }
                break;
                case LET:
                    _localctx = new LetInExpContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(27);
                    let();
                    setState(28);
                    exp();
                    setState(29);
                    match(SEMIC);
                }
                break;
                case CLASS:
                    _localctx = new ClassExpContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(32);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(31);
                                classdec();
                            }
                        }
                        setState(34);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == CLASS);
                    setState(36);
                    match(SEMIC);
                    setState(38);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == LET) {
                        {
                            setState(37);
                            let();
                        }
                    }

                    setState(40);
                    exp();
                    setState(41);
                    match(SEMIC);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ClassdecContext classdec() throws RecognitionException {
        ClassdecContext _localctx = new ClassdecContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_classdec);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(45);
                match(CLASS);
                setState(46);
                match(ID);
                setState(49);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == IMPLEMENTS) {
                    {
                        setState(47);
                        match(IMPLEMENTS);
                        setState(48);
                        match(ID);
                    }
                }

                setState(62);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LPAR) {
                    {
                        setState(51);
                        match(LPAR);
                        setState(52);
                        vardec();
                        setState(57);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(53);
                                    match(COMMA);
                                    setState(54);
                                    vardec();
                                }
                            }
                            setState(59);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(60);
                        match(RPAR);
                    }
                }

                setState(74);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == CLPAR) {
                    {
                        setState(64);
                        match(CLPAR);
                        setState(68);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(65);
                                    fun();
                                    setState(66);
                                    match(SEMIC);
                                }
                            }
                            setState(70);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0));
                        setState(72);
                        match(CRPAR);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final LetContext let() throws RecognitionException {
        LetContext _localctx = new LetContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_let);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                match(LET);
                setState(80);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(77);
                            dec();
                            setState(78);
                            match(SEMIC);
                        }
                    }
                    setState(82);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0));
                setState(84);
                match(IN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VardecContext vardec() throws RecognitionException {
        VardecContext _localctx = new VardecContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_vardec);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(86);
                type();
                setState(87);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarasmContext varasm() throws RecognitionException {
        VarasmContext _localctx = new VarasmContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_varasm);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(89);
                vardec();
                setState(90);
                match(ASM);
                setState(91);
                exp();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunContext fun() throws RecognitionException {
        FunContext _localctx = new FunContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_fun);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(93);
                type();
                setState(94);
                match(ID);
                setState(95);
                match(LPAR);
                setState(104);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0)) {
                    {
                        setState(96);
                        vardec();
                        setState(101);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(97);
                                    match(COMMA);
                                    setState(98);
                                    vardec();
                                }
                            }
                            setState(103);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(106);
                match(RPAR);
                setState(108);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LET) {
                    {
                        setState(107);
                        let();
                    }
                }

                setState(110);
                exp();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DecContext dec() throws RecognitionException {
        DecContext _localctx = new DecContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_dec);
        try {
            setState(114);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 12, _ctx)) {
                case 1:
                    _localctx = new VarAssignmentContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(112);
                    varasm();
                }
                break;
                case 2:
                    _localctx = new FunDeclarationContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(113);
                    fun();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(116);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpContext exp() throws RecognitionException {
        ExpContext _localctx = new ExpContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_exp);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(119);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == MINUS) {
                    {
                        setState(118);
                        match(MINUS);
                    }
                }

                setState(121);
                ((ExpContext) _localctx).left = term();
                setState(124);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == PLUS || _la == MINUS) {
                    {
                        setState(122);
                        ((ExpContext) _localctx).operator = _input.LT(1);
                        _la = _input.LA(1);
                        if (!(_la == PLUS || _la == MINUS)) {
                            ((ExpContext) _localctx).operator = (Token) _errHandler.recoverInline(this);
                        } else {
                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                            _errHandler.reportMatch(this);
                            consume();
                        }
                        setState(123);
                        ((ExpContext) _localctx).right = exp();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TermContext term() throws RecognitionException {
        TermContext _localctx = new TermContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_term);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(126);
                ((TermContext) _localctx).left = factor();
                setState(129);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == TIMES || _la == DIV) {
                    {
                        setState(127);
                        ((TermContext) _localctx).operator = _input.LT(1);
                        _la = _input.LA(1);
                        if (!(_la == TIMES || _la == DIV)) {
                            ((TermContext) _localctx).operator = (Token) _errHandler.recoverInline(this);
                        } else {
                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                            _errHandler.reportMatch(this);
                            consume();
                        }
                        setState(128);
                        ((TermContext) _localctx).right = term();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FactorContext factor() throws RecognitionException {
        FactorContext _localctx = new FactorContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_factor);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(131);
                ((FactorContext) _localctx).left = value();
                setState(134);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << LEQ) | (1L << GEQ) | (1L << AND) | (1L << OR))) != 0)) {
                    {
                        setState(132);
                        ((FactorContext) _localctx).operator = _input.LT(1);
                        _la = _input.LA(1);
                        if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << LEQ) | (1L << GEQ) | (1L << AND) | (1L << OR))) != 0))) {
                            ((FactorContext) _localctx).operator = (Token) _errHandler.recoverInline(this);
                        } else {
                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                            _errHandler.reportMatch(this);
                            consume();
                        }
                        setState(133);
                        ((FactorContext) _localctx).right = value();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ValueContext value() throws RecognitionException {
        ValueContext _localctx = new ValueContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_value);
        int _la;
        try {
            setState(201);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 24, _ctx)) {
                case 1:
                    _localctx = new IntValContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(136);
                    match(INTEGER);
                }
                break;
                case 2:
                    _localctx = new BoolValContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(138);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == NOT) {
                        {
                            setState(137);
                            match(NOT);
                        }
                    }

                    setState(140);
                    _la = _input.LA(1);
                    if (!(_la == TRUE || _la == FALSE)) {
                        _errHandler.recoverInline(this);
                    } else {
                        if (_input.LA(1) == Token.EOF) matchedEOF = true;
                        _errHandler.reportMatch(this);
                        consume();
                    }
                }
                break;
                case 3:
                    _localctx = new BaseExpContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(141);
                    match(LPAR);
                    setState(142);
                    exp();
                    setState(143);
                    match(RPAR);
                }
                break;
                case 4:
                    _localctx = new IfExpContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(145);
                    match(IF);
                    setState(146);
                    ((IfExpContext) _localctx).cond = exp();
                    setState(147);
                    match(THEN);
                    setState(148);
                    match(CLPAR);
                    setState(149);
                    ((IfExpContext) _localctx).thenBranch = exp();
                    setState(150);
                    match(CRPAR);
                    setState(151);
                    match(ELSE);
                    setState(152);
                    match(CLPAR);
                    setState(153);
                    ((IfExpContext) _localctx).elseBranch = exp();
                    setState(154);
                    match(CRPAR);
                }
                break;
                case 5:
                    _localctx = new VarExpContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(156);
                    match(ID);
                }
                break;
                case 6:
                    _localctx = new ThisExpContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(157);
                    match(THIS);
                }
                break;
                case 7:
                    _localctx = new FunExpContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(158);
                    match(ID);
                    {
                        setState(159);
                        match(LPAR);
                        setState(168);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << LPAR) | (1L << IF) | (1L << THIS) | (1L << NEW) | (1L << INTEGER) | (1L << ID))) != 0)) {
                            {
                                setState(160);
                                exp();
                                setState(165);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == COMMA) {
                                    {
                                        {
                                            setState(161);
                                            match(COMMA);
                                            setState(162);
                                            exp();
                                        }
                                    }
                                    setState(167);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                            }
                        }

                        setState(170);
                        match(RPAR);
                    }
                }
                break;
                case 8:
                    _localctx = new MethodExpContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                {
                    setState(171);
                    _la = _input.LA(1);
                    if (!(_la == THIS || _la == ID)) {
                        _errHandler.recoverInline(this);
                    } else {
                        if (_input.LA(1) == Token.EOF) matchedEOF = true;
                        _errHandler.reportMatch(this);
                        consume();
                    }
                    setState(172);
                    match(DOT);
                    setState(173);
                    match(ID);
                    {
                        setState(174);
                        match(LPAR);
                        setState(183);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << LPAR) | (1L << IF) | (1L << THIS) | (1L << NEW) | (1L << INTEGER) | (1L << ID))) != 0)) {
                            {
                                setState(175);
                                exp();
                                setState(180);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == COMMA) {
                                    {
                                        {
                                            setState(176);
                                            match(COMMA);
                                            setState(177);
                                            exp();
                                        }
                                    }
                                    setState(182);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                            }
                        }

                        setState(185);
                        match(RPAR);
                    }
                }
                break;
                case 9:
                    _localctx = new NewExpContext(_localctx);
                    enterOuterAlt(_localctx, 9);
                {
                    setState(186);
                    match(NEW);
                    setState(187);
                    match(ID);
                    setState(199);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == LPAR) {
                        {
                            setState(188);
                            match(LPAR);
                            setState(189);
                            exp();
                            setState(194);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == COMMA) {
                                {
                                    {
                                        setState(190);
                                        match(COMMA);
                                        setState(191);
                                        exp();
                                    }
                                }
                                setState(196);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                            setState(197);
                            match(RPAR);
                        }
                    }

                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProgContext extends ParserRuleContext {
        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ProgContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        public void copyFrom(ProgContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ClassExpContext extends ProgContext {
        public ClassExpContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }

        public TerminalNode SEMIC(int i) {
            return getToken(FOOLParser.SEMIC, i);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<ClassdecContext> classdec() {
            return getRuleContexts(ClassdecContext.class);
        }

        public ClassdecContext classdec(int i) {
            return getRuleContext(ClassdecContext.class, i);
        }

        public LetContext let() {
            return getRuleContext(LetContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterClassExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitClassExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitClassExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class LetInExpContext extends ProgContext {
        public LetInExpContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        public LetContext let() {
            return getRuleContext(LetContext.class, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public TerminalNode SEMIC() {
            return getToken(FOOLParser.SEMIC, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterLetInExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitLetInExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitLetInExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SingleExpContext extends ProgContext {
        public SingleExpContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public TerminalNode SEMIC() {
            return getToken(FOOLParser.SEMIC, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterSingleExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitSingleExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitSingleExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ClassdecContext extends ParserRuleContext {
        public ClassdecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode CLASS() {
            return getToken(FOOLParser.CLASS, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(FOOLParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(FOOLParser.ID, i);
        }

        public TerminalNode IMPLEMENTS() {
            return getToken(FOOLParser.IMPLEMENTS, 0);
        }

        public TerminalNode LPAR() {
            return getToken(FOOLParser.LPAR, 0);
        }

        public List<VardecContext> vardec() {
            return getRuleContexts(VardecContext.class);
        }

        public VardecContext vardec(int i) {
            return getRuleContext(VardecContext.class, i);
        }

        public TerminalNode RPAR() {
            return getToken(FOOLParser.RPAR, 0);
        }

        public TerminalNode CLPAR() {
            return getToken(FOOLParser.CLPAR, 0);
        }

        public TerminalNode CRPAR() {
            return getToken(FOOLParser.CRPAR, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(FOOLParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(FOOLParser.COMMA, i);
        }

        public List<FunContext> fun() {
            return getRuleContexts(FunContext.class);
        }

        public FunContext fun(int i) {
            return getRuleContext(FunContext.class, i);
        }

        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }

        public TerminalNode SEMIC(int i) {
            return getToken(FOOLParser.SEMIC, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_classdec;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterClassdec(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitClassdec(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitClassdec(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class LetContext extends ParserRuleContext {
        public LetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode LET() {
            return getToken(FOOLParser.LET, 0);
        }

        public TerminalNode IN() {
            return getToken(FOOLParser.IN, 0);
        }

        public List<DecContext> dec() {
            return getRuleContexts(DecContext.class);
        }

        public DecContext dec(int i) {
            return getRuleContext(DecContext.class, i);
        }

        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }
